set(CMAKE_CXX_STANDARD 20)

file(GLOB_RECURSE CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

find_package(GSL REQUIRED)
find_package(Matplot++ CONFIG REQUIRED)
find_path(MATPLOTLIB_CPP_INCLUDE_DIRS "matplotlibcpp.h")
find_package(Python 3 COMPONENTS Python Development NumPy Interpreter)
message("Python_FOUND:${Python_FOUND}")
message("Python_VERSION:${Python_VERSION}")
message("Python_LIBRARIES:${Python_LIBRARIES}")
message("PYTHON_INCLUDE_DIRS:${Python_INCLUDE_DIRS}")

foreach(CPPFILE ${CPPFILES})
    get_filename_component(CPPNAME ${CPPFILE} NAME_WE)
    add_executable(${CPPNAME} ${CPPFILE})
    target_compile_features(${CPPNAME} INTERFACE cxx_std_20)
    target_include_directories(${CPPNAME} SYSTEM PUBLIC ${CMAKE_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR})
    target_link_libraries(${CPPNAME} PRIVATE nld)
    target_link_libraries(${CPPNAME} PRIVATE GSL::gsl GSL::gslcblas)
    target_include_directories(${CPPNAME} PRIVATE ${MATPLOTLIB_CPP_INCLUDE_DIRS})
    target_link_libraries(${CPPNAME} PRIVATE ${Python_LIBRARIES})
    target_include_directories(${CPPNAME} PRIVATE ${Python_INCLUDE_DIRS})
    target_include_directories(${CPPNAME} PRIVATE ${Python_NumPy_INCLUDE_DIRS})
    target_link_libraries(${CPPNAME} PRIVATE Matplot++::cimg  Matplot++::matplot)
endforeach()
