set(CMAKE_CXX_STANDARD 20)

file(GLOB_RECURSE CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

find_package(GSL REQUIRED)
find_package(Matplot++ CONFIG REQUIRED)
find_path(MATPLOTLIB_CPP_INCLUDE_DIRS "matplotlibcpp.h")
find_package(Python3 COMPONENTS Development NumPy Interpreter)
message("Python3_FOUND:${Python3_FOUND}")
message("Python3_VERSION:${Python3_VERSION}")
message("Python3_LIBRARIES:${Python3_LIBRARIES}")
message("PYTHON_INCLUDE_DIRS:${Python3_INCLUDE_DIRS}")

foreach(CPPFILE ${CPPFILES})
    get_filename_component(CPPNAME ${CPPFILE} NAME_WE)
    add_executable(${CPPNAME} ${CPPFILE})
    target_compile_features(${CPPNAME} INTERFACE cxx_std_20)
    target_include_directories(${CPPNAME} SYSTEM PUBLIC ${CMAKE_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR})
    target_link_libraries(${CPPNAME} PRIVATE nld)
    target_link_libraries(${CPPNAME} PRIVATE GSL::gsl GSL::gslcblas)
    target_include_directories(${CPPNAME} PRIVATE ${MATPLOTLIB_CPP_INCLUDE_DIRS})
    target_link_libraries(${CPPNAME} PRIVATE ${Python3_LIBRARIES})
    target_include_directories(${CPPNAME} PRIVATE ${Python3_INCLUDE_DIRS})
    target_include_directories(${CPPNAME} PRIVATE ${Python3_NumPy_INCLUDE_DIRS})
    target_link_libraries(${CPPNAME} PRIVATE Matplot++::cimg  Matplot++::matplot)
endforeach()
